# ai-hackers-field-manual

./: .gitignore  README.md
examples/: llm_agents.rb
examples/llm_agents/: README.md
examples/plugin/: README.md  app.py  plugin_chain.py  requirements.txt  test.py
examples/plugin/migrations/versions/: e12c6b6efe21_initial_migration.py
examples/replicate_deploy/: README.md  cog.yaml  predict.py  pyproject.toml  run.py  test.py
examples/replicate_deploy/scripts/: download_and_prepare_model.py  tensorize_model.py
examples/self_hosted_llm_deploy/: predict.py  pyproject.toml
