[tool.poetry]
name = "replicate-deploy"
version = "0.1.0"
description = ""
authors = ["Ted Cheng <yiqun.cheng@gmail.com>"]
readme = "README.md"
packages = [{include = "replicate_deploy"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
