[tool.poetry]
name = "replicate-deploy"
version = "0.1.0"
description = ""
authors = ["Ted Cheng <yiqun.cheng@gmail.com>"]
readme = "README.md"
packages = [{include = "replicate_deploy"}]

[tool.poetry.dependencies]
python = "^3.10"
replicate = "^0.8.3"
python-dotenv = "^1.0.0"
torch = "^2.0.1"
huggingface-hub = "^0.14.1"
tensorizer = "^1.1.0"
transformers = "^4.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
